# BbI4MaT

./: .gitignore  CMakeLists.txt  bipki.py  itertest.out  main.cpp  testiter  vichmati.ipynb
lib/: itersolver.hpp  nlsolver.hpp  norm.hpp  solver.hpp  tools.hpp
tests/: TestthriD  test10000  test10000_Last  test10000_ntb  test10000_true_ntb
tools/: generator.py  tester.sh
